# rapidocr-grpc

./: Dockerfile  README.md
pb/: rapidocr.proto
pb/rapidocr/: __init__.py
rapidocr/: config.yaml  pyproject.toml  server.py
rapidocr/tests/: moonshot_price.html  server_test.py
