[tool.poetry]
authors = ["Deo <liangzhanzhao@metrodata.cn>"]
description = "ocr grpc service using rapidocr wrapper of paddleocr"
name = "rapidocr"
readme = "README.md"
version = "0.0.0"

[tool.poetry.dependencies]
betterproto = "v2.0.0b7"
grpclib = {version = "^0.4.5", extras = ["protobuf"]}
h11 = "^0.14.0"
httpx = "^0.27.0"
lineless-table-rec = ">=0.0.8"
opencv-python-headless = "^4.9.0.80"
pydantic-settings = "^2.0.3"
python = ">=3.10,<3.13"
rapidocr-onnxruntime = ">=1.3.23"
rapidocr-paddle = ">=1.3.23"
shapely = ">=2.0"
table-cls = ">=1.1.4"
wired-table-rec = ">=1.1.5"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
